--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -216,6 +216,9 @@
         <action
             android:id="@+id/action_profileFragment_to_attachmentGalleryFoldersFragment"
             app:destination="@id/attachmentGalleryFoldersFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_conversationCameraFragment"
+            app:destination="@id/conversationCameraFragment" />
     </fragment>
     <fragment
         android:id="@+id/securitySettingsFragment"
@@ -261,6 +264,9 @@
         <action
             android:id="@+id/action_appearanceSettingsFragment_to_attachmentGalleryFoldersFragment"
             app:destination="@id/attachmentGalleryFoldersFragment" />
+        <action
+            android:id="@+id/action_appearanceSettingsFragment_to_conversationCameraFragment"
+            app:destination="@id/conversationCameraFragment" />
     </fragment>
     <fragment
         android:id="@+id/previewBackgroundChatFragment"
@@ -524,16 +530,23 @@
         tools:layout="@layout/conversation_camera_fragment">
         <argument
             android:name="userId"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="0" />
         <argument
             android:name="contactId"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="0" />
         <action
             android:id="@+id/action_conversationCameraFragment_to_attachmentPreviewFragment"
             app:destination="@id/attachmentPreviewFragment" />
         <argument
             android:name="quote"
-            app:argType="string" />
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="location"
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
     <fragment
         android:id="@+id/contactProfileFragment"
@@ -548,6 +561,9 @@
         <action
             android:id="@+id/action_contactProfileFragment_to_attachmentGalleryFoldersFragment"
             app:destination="@id/attachmentGalleryFoldersFragment" />
+        <action
+            android:id="@+id/action_contactProfileFragment_to_conversationCameraFragment"
+            app:destination="@id/conversationCameraFragment" />
     </fragment>
     <fragment
         android:id="@+id/attachmentAudioFragment"
