--- a/app/src/main/res/values-fr/subscription.xml
+++ b/app/src/main/res/values-fr/subscription.xml
@@ -9,4 +9,7 @@
     <string name="text_free_trial_expired">Le temps de test a expiré</string>
     <string name="text_subscription_expiration">Expiration de l\'abonnement</string>
     <string name="text_check_conditions">Vous êtes sur le point d\'accéder à une plateforme externe à l\'application. Napoleon Secret Chat ne sauvegarde ni n\'a accès aux données fournies sur cette plateforme. Êtes-vous sûr de vouloir accéder à ce site?</string>
+    <string name="text_payment_method">Procédé de paiement</string>
+    <string name="text_message_selection_type_subscription">Vous devez sélectionner un type d\'abonnement</string>
+    <string name="text_warning">Vous serez ensuite redirigé vers un portail de paiement, ce portail est externe à Napoleon Secret Chat, il n\'a donc pas les mêmes caractéristiques que notre application et vous devez accepter les termes et conditions stipulés pour son utilisation. Nous ne sommes pas responsables du traitement des données fournies dans le module de paiement.</string>
 </resources>
