--- a/app/src/main/res/values-pt/subscription.xml
+++ b/app/src/main/res/values-pt/subscription.xml
@@ -9,4 +9,7 @@
     <string name="text_free_trial_expired">Tempo de teste expirado</string>
     <string name="text_subscription_expiration">Expiração da assinatura</string>
     <string name="text_check_conditions">Você está prestes a ir para uma plataforma externa ao aplicativo. O Napoleon Secret Chat não salva nem tem acesso aos dados fornecidos nesta plataforma. Tem certeza de que deseja ir a este site?</string>
+    <string name="text_payment_method">Método de pago</string>
+    <string name="text_message_selection_type_subscription">Você deve selecionar um tipo de assinatura</string>
+    <string name="text_warning">Em seguida, você será redirecionado para um portal de pagamento, este portal é externo ao Napoleon Secret Chat, portanto, não possui as mesmas características de nosso aplicativo e você deve aceitar os termos e condições estipulados para seu uso. Não nos responsabilizamos pelo tratamento dos dados fornecidos no módulo de pagamento.</string>
 </resources>
