--- a/app/src/main/res/layout/color_scheme_fragment.xml
+++ b/app/src/main/res/layout/color_scheme_fragment.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.naposystems.pepito.ui.colorScheme.ColorSchemeViewModel" />
+
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -31,9 +35,12 @@
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
+                        android:scaleType="centerCrop"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:previewTheme="@{viewModel.theme}"
+                        tools:src="@drawable/theme_dark_napoleon" />
 
                     <ImageButton
                         android:id="@+id/imageButton_save_configuration"
