--- a/app/src/main/res/drawable/bg_my_quote_my_message.xml
+++ b/app/src/main/res/drawable/bg_my_quote_my_message.xml
@@ -2,8 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:width="4dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/linkTextColor" />
-
+            <solid android:color="?attr/attrIdentifierColorMyQuote" />
             <corners
                 android:bottomLeftRadius="4dp"
                 android:topLeftRadius="4dp" />
@@ -11,7 +10,7 @@
     </item>
     <item android:left="4dp">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="?attr/attrBackgroundColorQuoteMyMessage" />
             <corners
                 android:bottomRightRadius="4dp"
                 android:topRightRadius="4dp" />
