--- a/app/src/main/res/drawable/bg_your_quote_my_message.xml
+++ b/app/src/main/res/drawable/bg_your_quote_my_message.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:width="4dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/red" />
+            <solid android:color="?attr/attrIdentifierColorYourQuote" />
             <corners
                 android:bottomLeftRadius="4dp"
                 android:topLeftRadius="4dp" />
@@ -10,7 +10,7 @@
     </item>
     <item android:left="4dp">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="?attr/attrBackgroundColorQuoteMyMessage" />
             <corners
                 android:bottomRightRadius="4dp"
                 android:topRightRadius="4dp" />
