--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="viewModel"
+            type="com.naposystems.pepito.utility.sharedViewModels.userDisplayFormat.UserDisplayFormatShareViewModel" />
+
+        <variable
             name="clickListener"
             type="com.naposystems.pepito.ui.home.adapter.ConversationAdapter.ClickListener" />
 
@@ -73,6 +77,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/imageView_user_image"
             app:layout_constraintTop_toTopOf="parent"
+            app:nameFormat="@{viewModel.userDisplayFormat}"
             app:name="@{conversation.contact}"
             tools:text="@tools:sample/full_names" />
 
@@ -83,11 +88,13 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
+            android:layout_marginStart="@dimen/normal_margin"
             android:textColor="?attr/attrColorButtonTint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/textView_user_name"
+            app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
+            app:nickNameFormat="@{viewModel.userDisplayFormat}"
             app:nickname="@{conversation.contact}"
             tools:text="@tools:sample/first_names" />
 
@@ -98,10 +105,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/normal_margin"
             android:ellipsize="end"
+            android:layout_marginStart="@dimen/normal_margin"
             android:lines="1"
             android:text="@{conversation.conversation.message}"
             app:layout_constraintEnd_toStartOf="@id/textView_unread_messages"
-            app:layout_constraintStart_toStartOf="@id/textView_user_name"
+            app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
             app:layout_constraintTop_toBottomOf="@id/textView_user_nickname"
             tools:text="@tools:sample/lorem/random" />
 
