--- a/app/src/main/res/layout/attachment_audio_fragment.xml
+++ b/app/src/main/res/layout/attachment_audio_fragment.xml
@@ -16,7 +16,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorBackground">
+            android:background="?attr/attrBackgroundColorBackground">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_audios"
