--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -66,4 +66,6 @@
     <string name="text_preview_my_message">Hi</string>
     <string name="text_preview_incoming_message">Hi, how are you?</string>
     <string name="text_message_restore_image">Are you sure you want to restore the default cover image?</string>
+    <string name="text_display_name">Display name</string>
+    <string name="text_nickname_not_contain_enough_char">The nickname must contain at least 5 characters.</string>
 </resources>
