--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -49,4 +49,6 @@
     <string name="text_preview_my_message">Hallo</string>
     <string name="text_preview_incoming_message">Hallo, wie geht es dir</string>
     <string name="text_message_restore_image">Möchten Sie das Standard-Titelbild wirklich wiederherstellen?</string>
+    <string name="text_display_name">Anzeigename</string>
+    <string name="text_nickname_not_contain_enough_char">Der Spitzname muss mindestens 5 Zeichen enthalten.</string>
 </resources>
