--- a/app/src/main/res/values-es/contact_profile.xml
+++ b/app/src/main/res/values-es/contact_profile.xml
@@ -6,6 +6,7 @@
     <string name="text_want_mute_conversation">Tem certeza de que quer contato restabelecer?</string>
     <string name="text_alert_nickname">El Apodo debe contener mínimo 5 y máximo 20 caracteres</string>
     <string name="text_alert_name">El Nombre debe contener mínimo 3 y máximo 50 caracteres</string>
+    <string name="text_name_not_contain_enough_char">El nombre debe contener mínimo 5 caracteres.</string>
     <string name="text_name_invalid">Nombre no válido</string>
     <string name="text_nickname_invalid">Apodo no válido</string>
 </resources>
