--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -49,4 +49,6 @@
     <string name="text_preview_my_message">Ciao</string>
     <string name="text_preview_incoming_message">Ciao come stai</string>
     <string name="text_message_restore_image">Sei sicuro di voler ripristinare l\'immagine di copertina predefinita?</string>
+    <string name="text_display_name">Nome visualizzato</string>
+    <string name="text_nickname_not_contain_enough_char">Il nickname deve contenere almeno 5 caratteri.</string>
 </resources>
