--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -49,4 +49,6 @@
     <string name="text_preview_my_message">Ola</string>
     <string name="text_preview_incoming_message">Oi, como vai?</string>
     <string name="text_message_restore_image">Tem certeza de que deseja restaurar a imagem da capa padrão?</string>
+    <string name="text_display_name">Nome de exibição</string>
+    <string name="text_nickname_not_contain_enough_char">O apelido deve conter pelo menos 5 caracteres.</string>
 </resources>
