--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -643,7 +643,7 @@
 
     <style name="TextInputLayoutOutlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="hintTextColor">?attr/attrHintTextColorSecondaryTextColor</item>
-        <item name="boxStrokeColor">?attr/attrBackgroundSectionColor</item>
+        <item name="boxStrokeColor">@color/textinput_layout_box_color</item>
         <item name="boxStrokeErrorColor">?attr/attrBoxStrokeErrorColorColorError</item>
         <item name="android:colorAccent">?attr/attrColorButtonTint</item>
         <item name="errorTextColor">?attr/attrErrorTextColorColorError</item>
